
Friday March 27th, 2015
-----------------------

    Hook up player velocity tilt.

    Hook up player push bobbing etc.

    Hook up player push/pull on other cubes entities in the world.

    Game logic for processing player inputs and controlling the sim is now ported across.


Thursday March 26th, 2015
-------------------------

    Brought across update authority into entity.cpp (commented out)

    Bring across the game code into game.h. This is the code that takes player input and applies
    forces and so on to cubes. Structure this such that it is easily called within the context
    of client side prediction rollback.

    Ensure that game code doesn't talk to ODE directly. goes through physics.h

    Stopped work on this as more physics sim work needs to be done first.

    Extended base entity to have a physics index.

    Extended cube entity create to actually create a physics object and set "physics_index" in the object.

    Renamed base entity "index" to "entity_index" to avoid confusion.

    Extended physics update to accept tick #

    Can now continue with player input application...

    Hook up player strafe forces.

    Hook up player bobbing force and torque.


Wednesday March 25th, 2015
--------------------------

    Set up physics.h and physics manager. This is the physics data that shims to the simulation.

    For now bring across ODE, conversion to Rubikon comes later.

    Don't custom build a version of ODE it's simply not required. Use the brew version.

    Split up cpp into physics_ode.cpp so we can later on have a physics_rubikon.cpp implementation.

    Convert physics interface to use vectorial instead of shitty old math library.

    Clean up the physics interface.


Tuesday March 24th, 2015
------------------------

    Need to bring in vectorial for vec3, quat etc.

    Rename edict to entity. Entity is the name I need here. Edict is a strange influence from past projects. 
